# ifsguid-backend

./: .codecov.yml  .dockerignore  .flake8  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  start_app.sh  start_app_production.sh
.github/workflows/: github-actions.yml
alembic/: env.py
alembic/versions/: 1df6ff5028e4_change_uuid_to_str_for_pks.py  b77bb559f678_init_message_and_interaction.py  c90a349beb8b_enhanced_datetime_fields.py
ifsguid/: config.py  crud.py  database.py  endpoints.py  main.py  models.py  modules.py  schemas.py  utils.py
nginx/: nginx.conf
nginx/static/error_pages/: custom_404.html  style.css
tests/: client.py  conftest.py  test_crud.py  test_endpoints.py
